<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <!--tools:showIn="navigation_view"-->
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"

        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_myOrders"
        android:icon="@drawable/nav_my_orders"
        android:title="@string/nav_my_orders" />


    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_bell"
        android:title="@string/notifications" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile"
        android:title="@string/nav_my_profile" />

    <item
        android:id="@+id/nav_change_pass"
        android:icon="@drawable/change_pass"
        android:title="@string/nav_change_password" />
    <item
        android:id="@+id/nav_Help"
        android:icon="@drawable/nav_question"
        android:title="@string/help" />
    <item
        android:id="@+id/nav_ContactUs"
        android:icon="@drawable/email"
        android:title="@string/contact_us" />
    <item
        android:id="@+id/nav_About_us"
        android:icon="@drawable/help"
        android:title="@string/nav_about_us" />
    <item
        android:id="@+id/nav_Logout"
        android:icon="@drawable/logout"
        android:title="@string/nav_logout" />

</menu>
