<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.controllers.activities.loginSignupPackage.RegisterActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/app_toolbar" />

    <View
        android:id="@+id/toolBarView"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@+id/toolbar"
        android:background="@drawable/toolbar_dropshadow" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/txtAlreadyAccount"
        android:layout_below="@+id/toolBarView"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/profile_back" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_12sp"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/add_npicture"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvFirstName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="@dimen/text_20"
                android:layout_marginRight="25dp"
                app:cardCornerRadius="4dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@null"
                    android:hint="@string/first_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="14sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvLastName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="@dimen/text_20"
                android:layout_marginRight="25dp"
                app:cardCornerRadius="4dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@null"
                    android:hint="@string/last_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="14sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="@dimen/text_20"
                android:layout_marginRight="25dp"
                app:cardCornerRadius="4dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@null"
                    android:hint="@string/txt_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="14sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="@dimen/text_20"
                android:layout_marginRight="25dp"
                app:cardCornerRadius="4dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@null"
                    android:hint="@string/txt_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="14sp" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cvConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="@dimen/text_20"
                android:layout_marginRight="25dp"
                app:cardCornerRadius="4dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@null"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="14sp" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cvRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="@dimen/text_20"
                android:layout_marginRight="25dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/green"
                app:cardCornerRadius="4dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/create_account"
                    android:textColor="@color/white"
                    android:fontFamily="@font/cairo_bold"
                    app:fontFamily="@font/cairo_bold"
                    android:textSize="@dimen/text_16sp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtAlreadyAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/cairo_bold"
        app:fontFamily="@font/cairo_bold"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/txt_already_have_an_account_log_in"
        android:textColor="@color/black" />
</RelativeLayout>