<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.controllers.activities.loginSignupPackage.LoginActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/app_toolbar" />

    <View
        android:id="@+id/toolBarView"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@+id/toolbar"
        android:background="@drawable/toolbar_dropshadow" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolBarView"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgLoginLogo"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginBottom="@dimen/dimen_15dp"
                android:layout_centerHorizontal="true"
                app:srcCompat="@drawable/ic_logo_orange" />

            <androidx.cardview.widget.CardView
                android:id="@+id/btnFacebookLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/imgLoginLogo"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/fb_color"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        app:srcCompat="@drawable/facebook_home_icon" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/login_with_facebook"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:fontFamily="@font/cairo_bold"
                        app:fontFamily="@font/cairo_bold"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/btnFacebookLogin"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="@dimen/text_20"
                android:layout_marginRight="25dp"
                app:cardCornerRadius="4dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@null"
                    android:hint="@string/txt_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="14sp" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cvPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:layout_below="@+id/cvEmail"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="@dimen/text_20"
                android:layout_marginRight="25dp"
                app:cardCornerRadius="4dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@null"
                    android:hint="@string/txt_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="14sp" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/lLForgotPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cvPassword"
                android:layout_marginTop="@dimen/text_20"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtForgetPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginLeft="25dp"
                        android:padding="10dp"
                        android:text="@string/forgot_password"
                        android:fontFamily="@font/cairo_bold"
                        app:fontFamily="@font/cairo_bold"
                        android:textColor="@color/dark_orange"
                        android:textSize="14sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="25dp"
                        android:padding="10dp"
                        android:fontFamily="@font/cairo_bold"
                        app:fontFamily="@font/cairo_bold"
                        android:text="@string/txt_sign_up"
                        android:textColor="@color/dark_orange"
                        android:textSize="14sp" />
                </RelativeLayout>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/lLForgotPass"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="@dimen/text_20"
                android:layout_marginRight="25dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/green"
                app:cardCornerRadius="4dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/login"
                    android:fontFamily="@font/cairo_bold"
                    app:fontFamily="@font/cairo_bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_16sp" />
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>