<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.controllers.activities.loginSignupPackage.ForgotPasswordActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/app_toolbar" />

    <View
        android:id="@+id/toolBarForgotPassView"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@+id/toolbar"
        android:background="@drawable/toolbar_dropshadow" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgFpLogo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_below="@+id/toolBarForgotPassView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        app:srcCompat="@drawable/ic_logo_orange" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imgFpLogo"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"

            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_20"
                android:gravity="center"
                android:text="@string/we_just_need_your_registered_email_id_to_sent_your_password_reset_instructions"
                android:textColor="@color/black"
                android:textSize="@dimen/text_16sp"
                android:fontFamily="@font/cairo_bold"
                app:fontFamily="@font/cairo_bold" />


            <androidx.cardview.widget.CardView
                android:id="@+id/rlForgotPassEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/btnFacebookLogin"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="@dimen/text_20"
                android:layout_marginRight="15dp"
                app:cardCornerRadius="4dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtForgotEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@null"
                    android:hint="@string/txt_email"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="14sp" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnForgotPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_15dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="@dimen/dimen_15dp"
                android:layout_marginBottom="@dimen/text_20"
                android:background="@drawable/green_curved_background"
                android:text="@string/reset_password"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/cairo_bold"
                app:fontFamily="@font/cairo_bold" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>